--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="~/css/review.css" />
     <!-- Site CSS -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
-            @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> *@
+        @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> *@
     <link rel="stylesheet" href="~/css/style.css" />
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="~/css/responsive.css" />
@@ -56,15 +56,15 @@
             background-image: none;
         }
 
-        .checked{
-            color:orange;
+        .checked {
+            color: orange;
         }
     </style>
 }
 
 <!-- Modal -->
 <div class="toast-container position-fixed top-25 start-50 translate-middle">
-    
+
     <div id="live-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <img src="..." class="rounded me-2" alt="...">
@@ -205,9 +205,18 @@
                                 <a data-product-id=@item.pId class="add-to-cart-coustom">
                                     <i class="fa-solid fa-cart-plus"></i>
                                 </a>
-                                <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
+                                @if (item.p是否加入收藏)
+                                {
+                                    <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom favorited">
+                                        <i class="far fa-heart"></i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
+                                        <i class="far fa-heart"></i>
+                                    </a>
+                                }
                             </div>
                         </div>
                     </div>
@@ -265,9 +274,20 @@
                                 <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
                                     <i class="fa-solid fa-cart-plus"></i>
                                 </a>
-                                <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
+
+                                @if (item.p是否加入收藏)
+                                {
+                                    <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom favorited">
+                                        <i class="far fa-heart"></i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
+                                        <i class="far fa-heart"></i>
+                                    </a>
+                                }
+
                             </div>
                         </div>
                     </div>
@@ -287,7 +307,6 @@
     </div>
     <div class="swiper pt-3 pb-3">
         <div class="swiper-wrapper pb-4" id="swipers">
-
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -492,7 +511,13 @@
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                        
+                        if (response.message == "favorited") {
+                            button.addClass('favorited');
+                        }
+                        else {
+                            button.removeClass('favorited');
+                        }
+
                     }
                     else {
                         $('#live-toast .toast-body').text(response.message);
@@ -518,7 +543,12 @@
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                        
+                        if (response.message == "favorited") {
+                            button.addClass('favorited');
+                        }
+                        else {
+                            button.removeClass('favorited');
+                        }
                     }
                     else {
                         $('#live-toast .toast-body').text(response.message);
@@ -748,8 +778,8 @@
                     const img = $(`<img src="${value.productPhoto}" class="img-thumbnail border-0">`)
                     const productName = $('<div class="position-absolute position-absolute top-0 start-0"></div>').append(`<h3 class="bg-warning text-dark ">${value.productName}</h3>`)
                     let stars = $('<div class="d-flex justify-content-around align-self-center mt-2 mb-3"></div>');
-                    if(value.productRating == 5 ){
-                        for(let i = 0; i<value.productRating ; i++){
+                    if (value.productRating == 5) {
+                        for (let i = 0; i < value.productRating; i++) {
                             stars.append('<span class="fs-1 fa fa-star checked "></span>');
                         }
                     }
