--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@* @model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem>  *@
+<!DOCTYPE html>
 <html lang="zh-Hans-TW">
 <!-- Basic -->
 
@@ -14,7 +15,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    @* @model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem> *@
+    
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="~/images/fac.ico" type="image/x-icon" />
@@ -53,22 +54,22 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse start-0" id="navbar-menu">
                     <ul class="nav navbar-nav" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="dropdown">
+                        <li class="dropdown" id="categoryDropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">所有商品</a>
                             <ul class="dropdown-menu">
-                                <li><a asp-controller="Index" asp-action="Shop">商品</a></li>
+                                <li><a asp-controller="Index" asp-action="Shop">全部商品</a></li>
 
-@*                                 
-                                @foreach (var item in Model.DistinctBy(p => p.pCategoryId))
+
+                               @*  @foreach (var i in Model.DistinctBy(pCategoryName))
                                 {
                                     <li>
-                                        <a class="for-ajax" href="#" data-category-name="@item.pCategoryName">
-                                            <span>@item.pCategoryName</span>
+                                        <a class="for-ajax" href="#" data-category-name="@i.pCategoryName">
+                                            <span>@i.pCategoryName</span>
                                         </a>
                                     </li>
+                                } *@
 
-                                }
-                                *@
+
 
                             </ul>
                         </li>
@@ -274,7 +275,8 @@
 
 @section Scripts{
     <script>
-        
+       
+
         ////右上角登入/註冊字樣切換功能(登入後會出現" Hello,xxx")
         //const targetloginTextClass = 'LoginText';
         //const logoutcontainer = 'Logout';
