--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -55,26 +55,27 @@
                 <div class="row justify-content-md-center">
                     <div class="col-10">
                         <div class="container-fluid">
-                             @using (Html.BeginForm("Login", "MemberLogin", FormMethod.Post))
-                            {
-                                <div class="row">
+                            @*@using (Html.BeginForm("Login", "MemberLogin", FormMethod.Post, new { id = "loginForm" }))
+                            {*@
+
+                            <div class="row" id="loginForm">
                                     <div>
                                         <label for="txtEmail">電子信箱：</label>
-                                        <input type="email" class="form-control" name="txtEmail"
+                                        <input type="email" class="form-control" id="txtEmail" name="txtEmail"
                                                placeholder="email" value="seoari@gmail.com" required>
                                         <div class="invalid-feedback"> 請輸入電子信箱</div>
                                     </div>
                                     <div>
                                         <label for="txtPassword">密碼：</label>
-                                        <input type="password" class="form-control" name="txtPassword"
+                                        <input type="password" class="form-control" id="txtPassword" name="txtPassword"
                                                placeholder="password" value="a12345" required>
                                         <div class="invalid-feedback"> 請輸入密碼 </div>
                                     </div>
                                 </div>
-
                                 <div class="d-grid gap-2 mt-3">
-                                    <input class="btn btn-light" type="submit" value="登入">
+                                    <input class="btn btn-light" type="submit" id="loginButton" value="登入">
                                 </div>
+                           
                                 <div>
                                     <div class="d-flex justify-content-between align-items-center mb-4 mt-2">
                                         <div class="d-flex justify-content-between">
@@ -94,6 +95,8 @@
                                 <div class="d-grid gap-2">
                                     <a asp-controller="memberlogin" asp-action="registermember" class="btn btn-light" type="button">加入會員</a>
                                 </div>
+                                <button class="btn btn-danger" id="unverifiedLogin">DEMO未驗證</button>
+
                                 <div class="mt-2 text-center">
                                     <a>或用其他社群登入</a>
                                 </div>
@@ -121,7 +124,8 @@
                                         <span> <img src="~/images/CatCha/twitter.png"></span>
                                     </a>*@
                                 </div>
-                            }
+                                
+                           @* }*@
                         </div>
                     </div>
                 </div>
@@ -255,5 +259,49 @@
     @*<script src="~/js/myScript.js"></script>*@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+
+    <script type="text/javascript">
+        //DEMO未信箱驗證會員
+        //DEMO按鈕
+        $('#unverifiedLogin').click(function () {
+            $('#txtEmail').val("cc@gmail.com");
+            $('#txtPassword').val("aa1234");
+        });
+
+
+
+
+        //新版登入
+        
+            const loginButton = document.getElementById("loginButton"); // 登入按鈕
+            loginButton.addEventListener("click", function (e) {
+                e.preventDefault(); // 防止表單自動提交
+
+                 //發送 AJAX 請求到 API 以驗證登入
+                $.ajax({
+                    url: '/MemberLogin/Login',
+                    type: 'POST', // 使用 POST 方法
+                     data: { txtEmail: $('#txtEmail').val(), txtPassword: $('#txtPassword').val() },
+                    success: function (name) {
+                    alert(`Hello~${name}歡迎回來`)
+                    window.location.href = '/';
+                    },
+                    error: function (err) {
+                        $('#ErrorMsg').html(err.responseText);
+                        $('#ErrorAlert').modal('toggle');
+                        return false; // 失敗時返回 false
+                    }
+                });
+
+            });
+     
+
+      
+           
+    
+
+
+    </script>
 </body>
 </html>
