--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -141,6 +141,7 @@
                                 <li><a asp-area="AdminCMS" asp-controller="Banner" asp-action="Banner">Banner</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="Navbar" asp-action="Navbar">navbar</a></li>
                                 <li><a asp-area="AdminCMS" asp-controller="News" asp-action="News">公告消息</a></li>
+                                <li><a asp-area="AdminCMS" asp-controller="BanUser" asp-action="Index">禁言會員</a></li>
                             </ul>
                         </div>
                     </div>
