--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/BanUser/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/BanUser/Index.cshtml
@@ -1,5 +1,137 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "禁言管理";
+    Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
+}
+
+@section Styles{
+    <style>
+        #GProduct-table td {
+            text-align: center;
+        }
+
+    </style>
+}
+
+<div class="middle-content">
+
+    <div class="row align-items-center">
+        <div class="col-6">
+            <h2 class="mt-3">禁言管理</h2>
+        </div>
+    </div>
+
+
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <div class="col-12">
+                <!--表格-->
+                <table id="GProduct-table" class="table table-striped nowrap" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th class="align-middle text-center">會員ID</th>
+                            <th class="align-middle text-center">會員名稱</th>
+                            <th class="align-middle text-center">會員暱稱</th>
+                            <th class="align-middle text-center">禁言時間</th>
+                            <th class="align-middle text-center">解除禁言時間</th>
+                            <th class="align-middle text-center">禁言狀態</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts
+{
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $('#GProduct-table').DataTable({
+            language: {
+                url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/zh-HANT.json',
+            },
+            "responsive": true,
+            "searching": true,
+            "processing": true,
+            "serverSide": false,
+            "paging": true,
+            "pagingType": "full_numbers",
+            "pageLength": 10,
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "全部"]],
+            "info": true,
+            "ajax": {
+                "url": "@Url.Action("GetMember", "BanUser" , new{ area="AdminCMS"})",
+                type: 'GET',
+            },
+            "columns": [
+                { "data": "memberId" },
+                { "data": "memberAccount" },
+                { "data": "name" },
+                { "data": "bannedTime" },
+                { "data": "unBannedTime" },
+                { 
+                    "data": "isBanned",
+                    "render": function (data, type, row) {
+                        let isChecked = data ? 'checked' : '';
+                        return '<input class="form-check-input ban-checkbox" type="checkbox" ' + isChecked + ' data-member-id="' + row.memberId + '">';
+                    }
+                },
+
+            ]
+        });
+        $('#GProduct-table tbody').on('change', 'input.ban-checkbox', function () {
+            let isChecked = $(this).is(':checked');
+            let memberId = $(this).data('member-id');
+            let checkboxElement = $(this);
+            Swal.fire({
+                title: '確定要禁言此人嗎?',
+                html: '請選擇到什麼時候解禁<br><input type="datetime-local" id="swal-input1" class="swal2-input">',
+                showDenyButton: true,
+                showCancelButton: true,
+                confirmButtonText: '是',
+                denyButtonText: '否',
+                preConfirm: () => {
+                    const datetime = Swal.getPopup().querySelector('#swal-input1').value
+                    if (!datetime) {
+                        Swal.showValidationMessage('請選擇到什麼時候解禁');
+                    }
+                    return datetime;
+                }
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    const datetime = result.value;
+                    $.ajax({
+                        url: '@Url.Action("BannedUser" , "BanUser" , new{area = "AdminCMS"})',
+                        type: 'POST',
+                        dataType: 'json',
+                        contentType: 'application/json; charset=utf-8',
+                        data: JSON.stringify({
+                            isBanned: isChecked,
+                            MemberId: memberId,
+                            unBannedTime: datetime
+                        }),
+                        success: function (response) {
+                            Swal.fire("成功", "成功禁言", "success");
+                            $('#GProduct-table').DataTable().ajax.reload();
+                        },
+                        error: function (jqXHR, textStatus, errorThrown) {
+                            Swal.fire('未成功禁言', '', 'info');
+                            checkboxElement.prop('checked', !isChecked);
+                            $('#GProduct-table').DataTable().ajax.reload();
+                        }
+                    });
+                } else {
+                    checkboxElement.prop('checked', !isChecked);
+                }
+            });
+        });
+
+
+
+    </script>
 }
